# SA2B_Archipelago

./: .gitignore  .gitmodules  LICENSE  README.md
SA2B_Archipelago/: SA2B_Archipelago.sln
SA2B_Archipelago/SA2B_Archipelago/: EntryPoints.cpp  SA2B_Archipelago.vcxproj  SA2B_Archipelago.vcxproj.filters  pch.h
SA2B_Archipelago/SA2B_Archipelago/Aesthetics/: CreditsManager.cpp  CreditsManager.h  MusicManager.cpp  MusicManager.h  StatsManager.cpp  StatsManager.h
SA2B_Archipelago/SA2B_Archipelago/Archipelago/: ArchipelagoManager.cpp  ArchipelagoManager.h
SA2B_Archipelago/SA2B_Archipelago/Items/: Emblems.cpp  Emblems.h  ItemData.cpp  ItemData.h  ItemManager.cpp  ItemManager.h
SA2B_Archipelago/SA2B_Archipelago/Locations/: ChaoGardenManager.cpp  ChaoGardenManager.h  LocationData.cpp  LocationData.h  LocationManager.cpp  LocationManager.h  StageSelectData.cpp  StageSelectData.h  StageSelectIcons.cpp  StageSelectIcons.h  StageSelectManager.cpp  StageSelectManager.h
SA2B_Archipelago/SA2B_Archipelago/ModLoader/: SA2Enums.h  SA2Functions.h  SA2Structs.h
SA2B_Archipelago/lib/APCpp/: APCpp.exp  (+7 more)
SonicAdventure2Randomizer/: SonicAdventure2Randomizer.sln
SonicAdventure2Randomizer/Debug/: SonicAdventure2Randomizer.exp  SonicAdventure2Randomizer.lib
SonicAdventure2Randomizer/SonicAdventure2Randomizer/: EntryPoints.cpp  SonicAdventure2Randomizer.vcxproj  SonicAdventure2Randomizer.vcxproj.filters
assets/: sonic2app_data.ini
assets/gd_PC/: ap_upgradeicons.pak  ap_upgradeicons.prs  staffRoll.prs
lib/APCpp/: .gitmodules  Archipelago.cpp  Archipelago.h  CMakeLists.txt
(+155 files in other folders)
